content/_generated-doc/2.16/config/quarkus-config-group-logging-console-config.adoc

:summaryTableId: quarkus-config-group-logging-console-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-config-group-logging-console-config_quarkus.log.console-console-logging]]link:#quarkus-config-group-logging-console-config_quarkus.log.console-console-logging[Console logging]

h|Type
h|Default

a| [[quarkus-config-group-logging-console-config_quarkus.log.console.enable]]`link:#quarkus-config-group-logging-console-config_quarkus.log.console.enable[quarkus.log.console.enable]`

[.description]
--
If console logging should be enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_ENABLE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-config-group-logging-console-config_quarkus.log.console.stderr]]`link:#quarkus-config-group-logging-console-config_quarkus.log.console.stderr[quarkus.log.console.stderr]`

[.description]
--
If console logging should go to `System++#++err` instead of `System++#++out`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_STDERR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_STDERR+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-config-group-logging-console-config_quarkus.log.console.format]]`link:#quarkus-config-group-logging-console-config_quarkus.log.console.format[quarkus.log.console.format]`

[.description]
--
The log format. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_FORMAT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-config-group-logging-console-config_quarkus.log.console.level]]`link:#quarkus-config-group-logging-console-config_quarkus.log.console.level[quarkus.log.console.level]`

[.description]
--
The console log level.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_LEVEL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-config-group-logging-console-config_quarkus.log.console.darken]]`link:#quarkus-config-group-logging-console-config_quarkus.log.console.darken[quarkus.log.console.darken]`

[.description]
--
Specify how much the colors should be darkened. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_DARKEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_DARKEN+++`
endif::add-copy-button-to-env-var[]
--|int 
|`0`


a| [[quarkus-config-group-logging-console-config_quarkus.log.console.filter]]`link:#quarkus-config-group-logging-console-config_quarkus.log.console.filter[quarkus.log.console.filter]`

[.description]
--
The name of the filter to link to the console handler.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_FILTER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-config-group-logging-console-config_quarkus.log.console.async]]`link:#quarkus-config-group-logging-console-config_quarkus.log.console.async[quarkus.log.console.async]`

[.description]
--
Indicates whether to log asynchronously

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_ASYNC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_ASYNC+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-config-group-logging-console-config_quarkus.log.console.async.queue-length]]`link:#quarkus-config-group-logging-console-config_quarkus.log.console.async.queue-length[quarkus.log.console.async.queue-length]`

[.description]
--
The queue length to use before flushing writing

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_ASYNC_QUEUE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_ASYNC_QUEUE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--|int 
|`512`


a| [[quarkus-config-group-logging-console-config_quarkus.log.console.async.overflow]]`link:#quarkus-config-group-logging-console-config_quarkus.log.console.async.overflow[quarkus.log.console.async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_ASYNC_OVERFLOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_ASYNC_OVERFLOW+++`
endif::add-copy-button-to-env-var[]
-- a|
`block`, `discard` 
|`block`


h|[[quarkus-config-group-logging-console-config_quarkus.log.console-handlers-console-handlers]]link:#quarkus-config-group-logging-console-config_quarkus.log.console-handlers-console-handlers[Console handlers]

h|Type
h|Default

a| [[quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.enable]]`link:#quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.enable[quarkus.log.handler.console."console-handlers".enable]`

[.description]
--
If console logging should be enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ENABLE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.stderr]]`link:#quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.stderr[quarkus.log.handler.console."console-handlers".stderr]`

[.description]
--
If console logging should go to `System++#++err` instead of `System++#++out`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__STDERR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__STDERR+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.format]]`link:#quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.format[quarkus.log.handler.console."console-handlers".format]`

[.description]
--
The log format. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__FORMAT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.level]]`link:#quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.level[quarkus.log.handler.console."console-handlers".level]`

[.description]
--
The console log level.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__LEVEL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.darken]]`link:#quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.darken[quarkus.log.handler.console."console-handlers".darken]`

[.description]
--
Specify how much the colors should be darkened. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__DARKEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__DARKEN+++`
endif::add-copy-button-to-env-var[]
--|int 
|`0`


a| [[quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.filter]]`link:#quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.filter[quarkus.log.handler.console."console-handlers".filter]`

[.description]
--
The name of the filter to link to the console handler.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__FILTER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.async]]`link:#quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.async[quarkus.log.handler.console."console-handlers".async]`

[.description]
--
Indicates whether to log asynchronously

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ASYNC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ASYNC+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.async.queue-length]]`link:#quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.async.queue-length[quarkus.log.handler.console."console-handlers".async.queue-length]`

[.description]
--
The queue length to use before flushing writing

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ASYNC_QUEUE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ASYNC_QUEUE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--|int 
|`512`


a| [[quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.async.overflow]]`link:#quarkus-config-group-logging-console-config_quarkus.log.handler.console.-console-handlers-.async.overflow[quarkus.log.handler.console."console-handlers".async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ASYNC_OVERFLOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_CONSOLE__CONSOLE_HANDLERS__ASYNC_OVERFLOW+++`
endif::add-copy-button-to-env-var[]
-- a|
`block`, `discard` 
|`block`

|===